apps/devkit/manifests/routes.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "HTTPRoute"
metadata:
  name: "devkit-ti1p3"
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: "devkit-lti1p3"
      port: 80
    # filters:
    # - type: "URLRewrite"
    #   urlRewrite:
    #     path:
    #       replacePrefixMatch: "/"
    #       type: "ReplacePrefixMatch"
    matches:
    - path:
        type: "PathPrefix"
        value: "/devkit"
